# py_ticket_sales

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh
.docker/prometheus/: prometheus.yaml
.docker/promtail/: config.yml
docs/: doc_especificacoes.md  doc_tecnica.md
docs/UML/: customer_class_diagram.puml  partner_class_diagram.puml
migrations/: env.py
migrations/versions/: 38e6e94ac304_create_partners_table.py  5b1bc38589cf_create_event_table.py  e0db7453646d_create_customer_table.py
src/: diagnostic.py  main.py  settings.py
src/core/common/domain/: aggregate_root.py  entities.py  exceptions.py  repositories.py  value_objects.py
src/core/common/tests/unit/domain/: test_unit_value_objects.py
src/core/events/domain/entities/: customer.py  event.py  event_section.py  event_spot.py  partner.py
src/core/events/domain/repositories/: partner_repository_interface.py  repositories_interface.py
src/core/events/infra/database/repositories/: partner_sqlalchemy_repository.py  repositories.py
src/core/events/infra/database/sqlalchemy/: config.py  mappers.py  models.py
src/core/events/infra/logging/: customlogging.py  logger_config.py
src/core/events/tests/integration/domain/entities/: test_integr_customer.py  test_integr_event.py  test_integr_event_section.py  test_integr_event_spot.py  test_integr_partner.py
src/core/events/tests/integration/infra/database/sqlalchemy/: test_integr_models.py
src/core/events/tests/unit/domain/entities/: test_unit_customer.py  test_unit_event.py  test_unit_event_section.py  test_unit_partner.py
