[tool.poetry]
name = "ticket-sales"
version = "0.1.0"
description = "Ticket Sales"
authors = ["candidosouza <candidosouzza@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
